...
            icon={<NotificationsIcon color={theme.textSecondary} size={22} />}
            title="Notifications"
            onPress={() => router.push('/settings-notifications')}
          />
          <Divider />
          <CategoryRow
            testID="settings.category.sync"
            icon={<SyncIcon color={theme.textSecondary} size={22} />}
            title="Sync"
            onPress={() => router.push('/settings-sync')}
          />
          <Divider />
          <CategoryRow
...
